@@ -53,6 +53,7 @@ require($IP.'/includes/Namespace.php');
 	define('NS_DIRECTORY',	108);		// extension DirectoryManager
 	define('NS_EXTENSION',  110);		// for easy integration with MediaWiki.org
 	define('NS_EXT',  		112);		// [[Extension:ExtensionManager]]
+	define('NS_REPO',  		114);		// [[Extension:RepositoryManager]]	
 ##CUSTOMIZATION	
     #define('NS_XYZ',		nnn);
 	
@@ -64,6 +65,7 @@ require($IP.'/includes/Namespace.php');
 	$wgExtraNamespaces[NS_DIRECTORY]	= 'Directory';	
 	$wgExtraNamespaces[NS_EXTENSION]	= 'Extension';		
 	$wgExtraNamespaces[NS_EXT]  		= 'Ext';
+	$wgExtraNamespaces[NS_REPO]  		= 'Repository';	
 ##CUSTOMIZATION
 	#$wgExtraNamespaces[NS_XYZ]  		= 'bla bla bla';
 
@@ -90,6 +92,7 @@ NS_INTERWIKI,	// not used at the moment.
 NS_DIRECTORY,
 NS_EXTENSION,
 NS_EXT,
+NS_REPO,
 ##CUSTOMIZATION
 #NS_XYZ
 );
@@ -421,6 +424,7 @@ require('extensions/GoogleCode/GoogleCode_stub.php');
 require('extensions/PageServer/PageServer_stub.php');
 require('extensions/NamespaceManager/NamespaceManager.php');
 require('extensions/ExtensionManager/ExtensionManager_stub.php');
+require('extensions/RepositoryManager/RepositoryManager_stub.php');
 
 #require('extensions/ExtensionManager/ExtensionManager_stub.php');
 
