@@ -1,0 +1,11 @@
+<?php
+//<source lang=php>
+
+RepositoryClasses::$list = array(
+
+'GoogleCodeRepo',
+##ADD MORE BELOW
+
+);
+
+//</source>
